
* IS_DUPLICATE_FS_LABEL now excludes ZFS pool and device /dev/zd*
* IS_MARIADBEVOLINUXCONF enabled back in --future
* IS_OLD_HOME_DIR enabled back in --future
* IS_PHPEVOLINUXCONF enabled back in --future
* IS_SSHLASTMATCH enabled in --future

### Fixed

* find(1): follow symbolic links when searching for backup
* get_version: avoid stderr if minifirewall version can’t be guessed on wheezy

### Deprecated

### Removed

* IS_NRPEDISKS already deactivated fourteen years ago
* IS_DISKPERF already deactivated six years ago

### Security

## [25.10.3] 2025-10-20

### Removed

* meta check is useless, and pushed into each check

## [25.10.2] 2025-10-20

### Changed

* IS_NRPEPRESSURE: only in --future
* IS_MINIFWINCLUDES: accept comments

### Fixed

* minifirewall might not be installed, it's OK

## [25.10.1] 2025-10-16

### Removed

* IS_EVOMAINTENANCECONF: don't search for DB hook variables anymore

## [25.10] 2025-10-13

### Added

* New --future flag (#182) that activates IS_MINIFW_RELATED, IS_NO_SIGNED_BY,
  IS_NOT_DEB822, and IS_POSTFIX_IPV6_DISABLED.
* Support minifirewall managed by systemd

## [25.08.1] 2025-08-19

### Added

* IS_PHPMYADMINAPACHECONF: add quotes and curly-braces to some variables

### Changed

* IS_MINIFW_RELATED: disable regex when not needed
* IS_MINIFW_RELATED: disable check until most servers are fixed

### Fixed

* IS_MINIFW_RELATED: globbing doesn't work inside double-quotes

## [25.08] 2025-08-08

### Added

* Add IS_INTERFACESNETMASK check
* Add IS_WKHTMLTOPDF and IS_LXC_WKHTMLTOPDF (#180)
* Add IS_MINIFW_RELATED (#167)

### Changed

* Enable IS_MINIFWINCLUDES

### Fixed

* IS_LOG2MAILSYSTEMDUNIT: Drop useless /etc/init.d/log2mail check (#178)
* Uniform use of containers_list instead of container_list

## [25.05] 2025-07-20

### Changed

* listupgrade.sh can be in /usr/local/sbin as well as /usr/share/scripts

### Fixed

* [Stretch] IS_MONITORINGCTL: absolute path for monitoringctl (/usr/local/bin not in PATH inside cron)
